--- a/LOMV2/MainWindow.xaml
+++ b/LOMV2/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase" 
         xmlns:src="clr-namespace:LOM.Converters"
         mc:Ignorable="d"
-        Title="MW5 LoadOrderManager II" Height="400" Width="1050" MinWidth="1050">
+        Title="MW5 LoadOrderManager II" Height="500" Width="1050" MinWidth="1050" SizeChanged="Window_SizeChanged">
     <Window.Resources>
         <src:StringBoolDataConverter x:Key="dateConverter"/>
         <Style TargetType="Button" x:Key="RoundButton">
@@ -27,15 +27,18 @@
             <MenuItem Header="Add _Secondary Mods Folder" Click="Add_Secondary_Mods_Folder"/>
             <MenuItem Header="Info" Click="Info_Click"/>
         </Menu>
-        <StackPanel DockPanel.Dock="Top">
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Main Folder"/>
-                <Label x:Name="MainFolderLabel" Content="{Binding MainModsFolder}"></Label>
-            </StackPanel>
+        <StackPanel Margin="0,0,20,0" DockPanel.Dock="Top" Orientation="Horizontal">
+            <Label DockPanel.Dock="Top" Content="Main Folder: "/>
+            <Label DockPanel.Dock="Top" x:Name="MainFolderLabel" Content="{Binding MainModsFolder}"></Label>
         </StackPanel>
-        <Grid DockPanel.Dock="Top" Margin="2,4,2,2">
+        <DockPanel Margin="5,0,20,10" DockPanel.Dock="Top">
+            <CheckBox Click="CheckBox_Click" IsChecked="{Binding HightlightChecked}" Margin="150,0,0,0" DockPanel.Dock="Left" Content="Highlight" Padding="4,-1,3,0" Grid.IsSharedSizeScope="True" VerticalAlignment="Center"/>
+            <Label DockPanel.Dock="Left" Content="Filter"/>
+            <TextBox TextChanged="FilterTextBox_TextChanged" DockPanel.Dock="Left" x:Name="FilterTextBox"/>
+        </DockPanel>
+        <Grid DockPanel.Dock="Top" Margin="2,0,2,2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150">
+                <ColumnDefinition Width="auto">
                 </ColumnDefinition>
                 <ColumnDefinition Width="*">
                 </ColumnDefinition>
@@ -48,7 +51,7 @@
                 <RowDefinition Height="*">
                 </RowDefinition>
             </Grid.RowDefinitions>
-            <Grid Grid.Column="0" Grid.Row="1" Margin="2,30,2,0">
+            <Grid Name="UserControlsGrid" Grid.Column="0" Grid.Row="1" Margin="2,0,2,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto">
                     </ColumnDefinition>
@@ -68,26 +71,18 @@
                     </RowDefinition>
                     <RowDefinition Height="auto">
                     </RowDefinition>
-                    <RowDefinition Height="auto">
+                    <RowDefinition Height="*">
                     </RowDefinition>
                 </Grid.RowDefinitions>
-                <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.ColumnSpan="99" Click="Refresh_Button_Click" >Refresh</Button>
+                <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.ColumnSpan="2" Click="Refresh_Button_Click" Margin="0,25,0,0" >Refresh</Button>
                 <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.Row="1" Click="Upp_Button_Click">Up</Button>
                 <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.Row="2" Click="Down_Button_Click">Down</Button>
                 <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.Row="3" Click="Apply">Apply</Button>
                 <Button Style="{DynamicResource RoundButton}" Grid.Column="0" Grid.Row="4" Click="Remove_Button_Click">Remove</Button>
-                <Grid Grid.Column="1" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Center">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*">
-                        </RowDefinition>
-                        <RowDefinition Height="*">
-                        </RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Button Style="{DynamicResource RoundButton}" Grid.Row="0" Click="Enable_All_Button_Click">Enable All</Button>
-                    <Button Style="{DynamicResource RoundButton}" Grid.Row="1" Click="Disable_All_Button_Click">Disable All</Button>
-                </Grid>
-                <Label Grid.Row="5" Content="Game Version:"/>
-                <TextBox x:Name="VersionTextBox" Grid.Row="6" Grid.ColumnSpan="1" Text="1.1.328" TextChanged="VersionTextBox_TextChanged"/>
+                <Button Style="{DynamicResource RoundButton}" Grid.Column="1" Grid.Row="2" Click="Enable_All_Button_Click">Enable All</Button>
+                <Button Style="{DynamicResource RoundButton}" Grid.Column="1" Grid.Row="3" Click="Disable_All_Button_Click">Disable All</Button>
+                <Label Grid.Row="5" Grid.ColumnSpan="99" Content="Game Version:"/>
+                <TextBox x:Name="VersionTextBox" Grid.Row="6" MaxHeight="20" Grid.ColumnSpan="2" Text="1.1.328" TextChanged="VersionTextBox_TextChanged" VerticalAlignment="Top"/>
             </Grid>
 
             <DataGrid Grid.Column="1" Grid.Row="1"
@@ -112,6 +107,9 @@
                             <DataTrigger Binding="{Binding IsOverriding}" Value="true">
                                 <Setter Property="Background" Value="Green"></Setter>
                             </DataTrigger>
+                            <DataTrigger Binding="{Binding Highlight}" Value="true">
+                                <Setter Property="Background" Value="Yellow"></Setter>
+                            </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </DataGrid.RowStyle>
@@ -123,7 +121,7 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Header="Priority" Binding="{Binding DefaultLoadOrder}" CanUserSort="False" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Load Order" Binding="{Binding DefaultLoadOrder}" CanUserSort="False" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Display Name" Binding="{Binding DisplayName}" CanUserSort="False" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Author" Binding="{Binding Author}" CanUserSort="False" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Folder" Binding="{Binding FolderNameShort}" CanUserSort="False" IsReadOnly="True"/>
@@ -141,10 +139,9 @@
                     </DockPanel>
                 </TabItem>
                 <TabItem Header="Overriding Info">
-                    <StackPanel MinHeight="100">
-                        <Label Name="SelectedMod" Content="{Binding SelectedModLabel}">
-                        </Label>
-                        <Grid MinHeight="100">
+                    <DockPanel>
+                        <Label DockPanel.Dock="Top" Name="SelectedMod" Content="{Binding SelectedModLabel}"/>
+                        <Grid DockPanel.Dock="Top">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -152,17 +149,15 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
                                 <RowDefinition Height="100"/>
-                                <RowDefinition Height="auto"/>
-                                <RowDefinition Height="*" MaxHeight="110"/>
                             </Grid.RowDefinitions>
-                            <Label Content="Overriding" Grid.Row="0" Grid.Column="0"/>
+                            <Label Grid.Row="0" Grid.Column="0" Content="Overriding"/>
                             <ListBox Grid.Row="1" Grid.Column="0" ItemsSource="{Binding SelectedMod.OverridingLabls}" Margin="2,0,2,0" SelectionChanged="Overriding_ListBox_Selected"/>
                             <Label Grid.Row="0" Grid.Column="1" Content="Overriden By"/>
                             <ListBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding SelectedMod.OverridenByModsLabels}" Margin="2,0,2,0" SelectionChanged="OverridenBy_ListBox_Selected"/>
-                            <Label Content="Manifest" Grid.Row="2"/>
-                            <ListBox x:Name="ManifestListBox" Grid.Row="3" Grid.ColumnSpan="99" MinHeight="110" Margin="2,0,2,0"/>
                         </Grid>
-                    </StackPanel>
+                        <Label DockPanel.Dock="Top" Content="Manifest"/>
+                        <ListBox DockPanel.Dock="Top" x:Name="ManifestListBox" Margin="2,0,2,0"/>
+                    </DockPanel>
                 </TabItem>
                 <TabItem Header="Secondary Folders">
                     <DockPanel>
